<resources>
    <string name="app_name">Android BooksClient</string>
    <string name="booklist">BookList</string>
    <string name="authorlist">AuthorList</string>
    <string name="BDTitle">Title</string>
    <string name="BDYear">Year</string>
    <string name="BDAuthor">Author</string>
    <string name="BDTags">Tags</string>
    <string name="ADAuthorName">Author</string>
    <string name="BDRemoveBook">Delete the book</string>
    <string name="BLAAddBook">Add a book</string>
    <string name="BCTitle">Title of the book</string>
    <string name="BCYear">Year of publication</string>
    <string name="BCCreateButton">Create a book</string>
    <string name="BCAuteur">Author</string>
    <string name="BCTags">Tags</string>
    <string name="ADRemoveAuthor">Delete the author</string>
    <string name="ACFirstname">FirstName</string>
    <string name="ACLastname">LastName</string>
    <string name="ACCreateButton">Create author</string>
    <string name="ALAAddAuthor">Add an Author</string>
    <string name="BCcreatetag">Create a Tag</string>
    <string name="TCname_of_the_tag">Name of the Tag</string>
    <string name="TCcreate_the_tag">Create the Tag</string>
    <string name="BLfilter_by_book_title">Filter by book title</string>
    <string name="BLFilterButton">Filter</string>
    <string name="ALfilter_by_lastname">Filter by lastname</string>
    <string name="ALFilterButton">Filter</string>
    <string name="BDEdit_the_bookButton">Edit the book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BEtitle">Title</string>
    <string name="BEpublication_year">Publication year</string>
    <string name="BEtags">Tags</string>
    <string name="BEconfirmButton">Confirm</string>
    <string name="BDChoisir_une_couverture_Button">Choisir une couverture</string>
</resources>