<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.Book.BookDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:text="@string/BDTitle" />

    <TextView
        android:id="@+id/bookYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:text="@string/BDYear" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/BDAuthor" />

    <TextView
        android:id="@+id/bookTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/BDTags" />

    <ImageView
        android:id="@+id/bookCover"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/pickImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BDChoisir_une_couverture_Button"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/editBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BDEdit_the_bookButton"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/deleteBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BDRemoveBook" />
    </LinearLayout>


</ScrollView>