<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.Author.AuthorCreate">

    <EditText
        android:id="@+id/inputFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ACFirstname"
        android:layout_marginBottom="12dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ACLastname"
        android:layout_marginBottom="24dp"
        android:inputType="text" />

    <Button
        android:id="@+id/confirmCreateAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ACCreateButton" />

</LinearLayout>