<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Book.BookEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/BEtitle"
            android:layout_marginBottom="12dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/editYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/BEpublication_year"
            android:layout_marginBottom="12dp"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BEtags"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <LinearLayout
            android:id="@+id/editTagsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/confirmEditBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BEconfirmButton" />

    </LinearLayout>
</ScrollView>